k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: api-service
  ports:
    - protocol: "TCP"
      port: 8080
